Added custom vertical gutters, TimeSeries svg, and abstracted a modules class for consistent formatting

--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
 		</div>
 	</div> -->
 
+	<div class = 'gutter'>
+		<!-- Nothing will go here, but we have to make vertical gutters by hand due to BootStrap's setup vs this one -->
+	</div>
 
-	<div class = "container-xl" id = 'module-1'>
+
+	<div class = "container-xl module" id = 'module-1'>
 		<!-- Anything relating to the country bubble visualization would go in this row -->
 		<div class = "row">
 			<!-- Vis title and possible external legend -->
@@ -52,8 +56,12 @@
 
 	</div>
 
+	<div class = 'gutter'>
+		<!-- Nothing will go here, but we have to make vertical gutters by hand due to BootStrap's setup vs this one -->
+	</div>
 
-    <div class = 'container-xl' id = 'module-2'>
+
+    <div class = 'container-xl module' id = 'module-2'>
         <!-- Vis title and possible external legend -->
         <div class = 'row'>
 
@@ -77,6 +85,7 @@
 
 	<!-- JS -->
 	<script src = "js/BeeSwarm.js"></script>
+	<script src = 'js/TimeSeries.js'></script>
 	<script src = "js/main.js"></script>
 
 </body>
