--- a/index.html
+++ b/index.html
@@ -75,6 +75,35 @@
 
     </div>
 
+	<div class = 'gutter'>
+		<!-- Nothing will go here, but we have to make vertical gutters by hand due to BootStrap's setup vs this one -->
+	</div>
+
+	<div class = 'container-xl module' id = 'module-3'>
+        <!-- Vis title and possible external legend -->
+        <div class = 'row'>
+
+
+        </div>
+
+        <!-- Row with the visualization -->
+		<div class = 'row' id = 'vis-3'>
+
+		</div>
+
+    </div>
+
+	<div class = 'gutter'>
+		<!-- Nothing will go here, but we have to make vertical gutters by hand due to BootStrap's setup vs this one -->
+	</div>
+
+	<div class = 'container-fluid' id = 'footer'>
+		<div class = 'row'>
+			<!-- About the authors section / acknowledgements -->
+		</div>
+
+	</div>
+
 	<!-- embedding JS libraries -->
 	<script src = "https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src = "https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -86,6 +115,7 @@
 	<!-- JS -->
 	<script src = "js/BeeSwarm.js"></script>
 	<script src = 'js/TimeSeries.js'></script>
+	<script src = 'js/Charity.js'></script>
 	<script src = "js/main.js"></script>
 
 </body>
