--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
 		
 
-		<div class = 'row' id = 'vis-2'>
+		<div class = 'row' id = 'vis-2' style="height: 70vh; width:100%;">
 			<!-- Row with the timeline vis -->
 
 		</div>
@@ -173,7 +173,10 @@
 	<script src = "https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src = "https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-
+	<!-- Load Underscore.js, a utility library for operating on arrays (filter, sort, min, max) -->
+	<script src='https://rawgit.com/jashkenas/underscore/master/underscore-min.js'></script>
+	<!--jQuery-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<!-- d3 -->
 	<script src = "https://d3js.org/d3.v6.min.js"></script>
 
