Updated index, skeleton awards, instantiate vis

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="navbar-nav">
 			  <a class="nav-link" href="#module-1">Connections</a>
 			  <a class="nav-link" href="#module-2">Success</a>
-			  <a class="nav-link" href="#module-3">Philanthropy</a>
+			  <a class="nav-link" href="#module-4">Philanthropy</a>
 			  <a class="nav-link" href="#footer">About</a>
 			</div>
 		  </div>
@@ -149,17 +149,42 @@
 	<div class = 'container-xl module' id = 'module-3'>
 
 
-        <div class = 'row'>
+		<div class = 'row'>
 			<div class = 'col' id = 'vis-3-title'>
-				<h3 class = 'vis-title title'>Charity Work (Mod 3)</h3>
+				<h3 class = 'vis-title title'>Dolly's Awards (Mod 3 ish)</h3>
 			</div>
 
 			<div class = 'col' id = 'vis-3-legend'>
+				<!-- Outsource award legend -->
+			</div>
+
+		</div>
+
+		<div class = 'row' id = 'vis-3'>
+			<!-- Awards matrix vis -->
+		</div>
+
+
+	</div>
+
+
+	<div class = 'gutter'></div>
+
+
+	<div class = 'container-xl module' id = 'module-4'>
+
+
+        <div class = 'row'>
+			<div class = 'col' id = 'vis-4-title'>
+				<h3 class = 'vis-title title'>Charity Work (Mod 3)</h3>
+			</div>
+
+			<div class = 'col' id = 'vis-4-legend'>
 				<!-- Outsource charitable legend here -->
 			</div>
         </div>
 
-		<div class = 'row' id = 'vis-3'>
+		<div class = 'row' id = 'vis-4'>
 			<!-- Map / Bubbles / whatever visualization we pick of her charitable impact -->
 		</div>
 
@@ -191,6 +216,7 @@
 	<script src = "js/BeeSwarm.js"></script>
 	<script src = "js/BubbleVis.js"></script>
 	<script src = 'js/TimeSeries.js'></script>
+	<script src = 'js/Awards.js'></script>
 	<script src = 'js/Charity.js'></script>
 	<script src = "js/main.js"></script>
 
