Linking Legend script in index

--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
 	<script src = 'js/TimeSeries.js'></script>
 	<script src = 'js/Awards.js'></script>
 	<script src = 'js/Charity.js'></script>
+	<script src = 'js/Legend.js'></script>
 	<script src = "js/main.js"></script>
 
 </body>
