--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 		<div class = 'col-10'>
 				<!-- CONTAINS ALL STATIC VERSIONS OF WHAT SHOULD BE TRANSITIONAL VISUALIZATIONS -->
-			<div class = "container-xl module" id = 'module-1'>
+			<div class = "container-fluid module" id = 'module-1'>
 
 
 				<!-- Anything relating to the (1ST STATIC VIEW) country bubble visualization would go in this row -->
@@ -127,7 +127,7 @@
 
 
 			<!-- Title and external legend side by side, plot underneath that, slider underneath the timeline -->
-			<div class = 'container-xl module' id = 'module-2'>
+			<div class = 'container-fluid module' id = 'module-2'>
 
 
 				<div class = 'row'>
@@ -156,7 +156,7 @@
 			<div class = 'gutter'></div>
 
 
-			<div class = 'container-xl module' id = 'module-3'>
+			<div class = 'container-fluid module' id = 'module-3'>
 
 
 				<div class = 'row'>
@@ -181,7 +181,7 @@
 			<div class = 'gutter'></div>
 
 
-			<div class = 'container-xl module' id = 'module-4'>
+			<div class = 'container-fluid module' id = 'module-4'>
 
 
 				<div class = 'row'>
