Initial award data upload, static text info added
- Uploaded pre-process and self-categorized award data pulled from
  Wikipedia
  - Added static textual information (aid storytelling) about number of
    nominated vs won awards and notable national recognition,
    specifically philanthropic
  - Updated style sheet with class-specific seperation and special font
    for numeric text

--- a/index.html
+++ b/index.html
@@ -206,11 +206,37 @@
 				</div>
 			</div>
 
-			<!-- Left of the vis -->
-			<div class = 'col-4'>
-				<h4 class = 'title'>Dolly has rejected the Presidential Medal of Freedom twice. Another former president was shocked upon hearing
+			<!-- Right of the vis -->
+			<div class = 'col-4'>		
+				<dvi class = row>
+					<div class="col">
+						<h1 class = 'title numeric'>216</h1>
+						<h4 class = 'title'><em>Won</em></h4>
+
+					</div>
+					<div class = "col">
+						<h1 class = 'title numeric'>195</h1>
+						<h4 class = 'title'><em>Nominated</em></h4>
+					</div>
+				</dvi>
+				
+				
+				<div class = 'gutter'></div>
+				<div class = 'gutter'></div>
+				<div class = 'gutter'></div>
+
+				<h4 class = 'title'>
+					She has received awards notably from the <em>Sevierville Chamber of Commerce</em>, <em>Hollywood Chamber of Commerce</em>, <em>United States Fish and Wildlife Service</em>, <em>Daughters of the American Revolution</em>,
+					<em>Woodrow Wilson International Center for Scholars of the Smithsonian Institution</em>, <em>United States Library of Congress</em> and the <em>United States Congress</em>.
+				</h4>	
+
+				<div class = 'gutter'></div>
+				<div class = 'gutter'></div>
+				<div class = 'gutter'></div>
+
+				<h4 class = 'title'>Dolly has rejected the <em>Presidential Medal of Freedom</em> twice. Another former president was shocked upon hearing
 					the news, assuming she had received one already.
-				</h4>						
+				</h4>	
 			</div>
 		</div>
 	</div>
