--- a/index.html
+++ b/index.html
@@ -190,15 +190,12 @@
 		<div class = 'row'>
 			<!-- Awards vis -->
 			<div class = 'col-8'>
-				<div class = 'row'>
-					<div class = 'col-8' id = 'vis-3-title'>
-						<h3 class = 'vis-title title'>Recognition of Impact: Music, Acting, Composition, Achievements, and Service</h3>
-					</div>
+				<div class = 'row' id = 'vis-3-title'>
+					<h3 class = 'vis-title title'>Recognition of Impact: Music, Acting, Composition, Achievements, and Service</h3>
+				</div>
 
-					<div class = 'col-4' id = 'vis-3-legend'>
-						<!-- Outsource award legend -->
-					</div>
-
+				<div class = 'row' id = 'vis-3-legend'>
+					<!-- Outsource award legend -->
 				</div>
 
 				<div class = 'row' id = 'vis-3'>
@@ -220,19 +217,28 @@
 					</div>
 				</dvi>
 				
+				<div class = 'gutter'></div>
+
+				<div class = 'row'>
+						<!--Contains the filter options  -->
+						<select class="form-control" id = 'vis-3-select' aria-label=".form-select-sm" onchange="awardsFilter()">
+							<option value="All">All</option>
+							<option value="Won">Won</option>
+							<option value="Nominated">Nominated</option>
+							<option value="Type">Type</option>
+						</select>
+				</div>
+
 				
-				<div class = 'gutter'></div>
-				<div class = 'gutter'></div>
-				<div class = 'gutter'></div>
+				<div class = 'big-gutter'></div>
+
 
 				<h4 class = 'title'>
 					She has received awards notably from the <em>Sevierville Chamber of Commerce</em>, <em>Hollywood Chamber of Commerce</em>, <em>United States Fish and Wildlife Service</em>, <em>Daughters of the American Revolution</em>,
 					<em>Woodrow Wilson International Center for Scholars of the Smithsonian Institution</em>, <em>United States Library of Congress</em> and the <em>United States Congress</em>.
 				</h4>	
 
-				<div class = 'gutter'></div>
-				<div class = 'gutter'></div>
-				<div class = 'gutter'></div>
+				<div class = 'big-gutter'></div>
 
 				<h4 class = 'title'>Dolly has rejected the <em>Presidential Medal of Freedom</em> twice. Another former president was shocked upon hearing
 					the news, assuming she had received one already.
@@ -304,7 +310,6 @@
 	<script src = "https://d3js.org/d3.v6.min.js"></script>
 
 	<!-- JS -->
-	<script src = "js/BeeSwarm.js"></script>
 	<script src = "js/BubbleVis.js"></script>
 	<script src = 'js/TimeSeries.js'></script>
 	<script src = 'js/Awards.js'></script>
