Making bigger gutter between UIslider and awards info vis

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 					<!-- Row with custom slider for the timeline can go here -->
 				</div>
 
-	<div class = 'gutter'></div>
+	<div class = 'big-gutter'></div>
 
 
 	<div class = 'container-fluid module' id = 'module-3'>
