Additional filtering, filtered nominated / won
- Abstracted "Type" selection into binned categories for (later) larger
  colormapping options
- With every selection (apparent only for not won, nominated, all) do a
  pseudo-filter and count up the number or won vs nominated
- Provides supporting evidence in the philanthropy category that she's
  won every service award she's been nominated for, which is the only
  category where this happens

--- a/index.html
+++ b/index.html
@@ -258,12 +258,12 @@
 			<div class = 'col-4'>		
 				<dvi class = row>
 					<div class="col">
-						<h1 class = 'title numeric'>216</h1>
+						<h1 class = 'title numeric' id = 'won-numeric'></h1>
 						<h4 class = 'title'><em>Won</em></h4>
 
 					</div>
 					<div class = "col">
-						<h1 class = 'title numeric'>195</h1>
+						<h1 class = 'title numeric' id = 'nominated-numeric'></h1>
 						<h4 class = 'title'><em>Nominated</em></h4>
 					</div>
 				</dvi>
@@ -276,7 +276,10 @@
 							<option value="All">All</option>
 							<option value="Won">Won</option>
 							<option value="Nominated">Nominated</option>
-							<option value="Type">Type</option>
+							<option value="Music Performance">Musical Performance</option>
+							<option value="Music">Musical Artistry</option>
+							<option value="Philanthropy">Philanthropy and Achievement</option>
+							<option value="Media Performance">Media Performance</option>
 						</select>
 				</div>
 
