--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 						</div>
 					</div>
 
-					<div class = 'col' id = 'vis-2-legend'>
+					<div class = 'col' id = 'vis-2-legend' style="height: 5vh; width:5vh;">
 						<!-- Outsource timeline legend here -->
 					</div>
 					
