--- a/index.html
+++ b/index.html
@@ -176,19 +176,8 @@
 				</div>
 		
 				<div class = 'row'>
-					<!-- Spider plot -->
-					<div class = 'col bubble-vis' id = 'vis-1c' style="height: 80vh; width: 100%;" >
-						<ol type="1">
-							<li>Listen to the current bubbles above for scroll action</li>
-							<li>Filter out all those not associated with Dolly that we previously had, exiting with transition so only the green and blue bubbles are left</li>
-							<li>Transition (duration = 800) collab bubbles position such that cy = vis.height - radius - marginal_padding, cx = i * (vis.width / data.length)</li>
-							<li>Transition (duration = 800) Dolly's bubble position to the top simultaneously with cy = 0 + marginal_padding, cx = vis.width / data.length</li>
-							<li>Draw curveMonotoneX paths from Dolly's bubble x = cx, y = cy + radius to all others such that x = cx, y = cy  - radius with simultaneous transition of longer duration</li>
-							<li>Transition the line thickness to scale proportional to number of collaborated songs (if available) or another related metric</li>
-							<li>Mouseover listener greys out all other bubbles (excluding Dolly and the one hovered on) and paths and displays Bootstrap card in a non-invasive area with relevant information</li>
-							<li>Mouseout resets bubble colors, path line colors, and removes pop out</li>
-							<li>Listen to other scroll events to transition to a new part of the DOM (vis 2 -- fancy time-series)</li>
-						</ol> 
+					<div class = 'col bubble-vis' id = 'vis-1c' >
+						<!-- Radial dendrogram goes here -->
 					</div>
 				</div>
 			</div>
