--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<!--nouislider-->
 	<link rel="stylesheet" href="css/nouislider.css" >
+	<link rel = "stylesheet" href = "css/dendrogram.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -355,6 +356,7 @@
 	<script src="js/nouislider.js"></script>
 	<!-- JS -->
 	<script src = "js/BubbleVis.js"></script>
+	<script src= "js/Dendrogram.js"></script>
 	<script src = 'js/TimeSeries.js'></script>
 	<script src = 'js/Awards.js'></script>
 	<script src = 'js/Charity.js'></script>
