add annotation for Dolly s songs

--- a/index.html
+++ b/index.html
@@ -352,8 +352,10 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<!-- d3 -->
 	<script src = "https://d3js.org/d3.v6.min.js"></script>
-	<!-- nouislider-->
+	<!-- nouislider -->
 	<script src="js/nouislider.js"></script>
+	<!-- annotations -->
+	<script src="js/d3-annotation.js"></script>
 	<!-- JS -->
 	<script src = "js/BubbleVis.js"></script>
 	<script src= "js/Dendrogram.js"></script>
