--- a/index.html
+++ b/index.html
@@ -219,9 +219,16 @@
 				<div class = 'row' id = 'vis-2' style="height: 70vh; width:100%;">
 					<!-- Row with the timeline vis -->
 				</div>
+				<div class = 'row' >
+					<h3 style="color: white"> Explore other decades! </h3>
+				</div>
 
 				<div class = 'row' id = 'vis-2-slider'>
 					<!-- Row with custom slider for the timeline can go here -->
+				</div>
+
+				<div class = 'row'>
+					<p></p>
 				</div>
 
 	<div class = 'big-gutter'></div>
