--- a/index.html
+++ b/index.html
@@ -37,45 +37,7 @@
 	<div class = 'container-fluid module' id = 'introduction'>
 		<div class = 'row'>
 			<div class = 'col-4'>
-				<!-- ADD BOOTSTRAP CAROUSEL WITH CAPTIONS -->
-				<div id="carouselDolly" class="carousel slide" data-bs-ride="false">
-					<div class="carousel-indicators">
-					  <button type="button" data-bs-target="#carouselDolly" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-					  <button type="button" data-bs-target="#carouselDolly" data-bs-slide-to="1" aria-label="Slide 2"></button>
-					  <button type="button" data-bs-target="#carouselDolly" data-bs-slide-to="2" aria-label="Slide 3"></button>
-					</div>
-					<div class="carousel-inner">
-					  <div class="carousel-item active">
-						<img src="...." class="d-block w-100" alt="...">
-						<!-- <div class="carousel-caption d-none d-md-block">
-						  <h5>First slide label</h5>
-						  <p>Some representative placeholder content for the first slide.</p>
-						</div> -->
-					  </div>
-					  <div class="carousel-item">
-						<img src="..." class="d-block w-100" alt="...">
-						<!-- <div class="carousel-caption d-none d-md-block">
-						  <h5>Second slide label</h5>
-						  <p>Some representative placeholder content for the second slide.</p>
-						</div> -->
-					  </div>
-					  <div class="carousel-item">
-						<img src="..." class="d-block w-100" alt="...">
-						<!-- <div class="carousel-caption d-none d-md-block">
-						  <h5>Third slide label</h5>
-						  <p>Some representative placeholder content for the third slide.</p>
-						</div> -->
-					  </div>
-					</div>
-					<button class="carousel-control-prev" type="button" data-bs-target="#carouselDolly" data-bs-slide="prev">
-					  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					  <span class="visually-hidden">Previous</span>
-					</button>
-					<button class="carousel-control-next" type="button" data-bs-target="#carouselDolly" data-bs-slide="next">
-					  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-					  <span class="visually-hidden">Next</span>
-					</button>
-				  </div>
+				<img src="img/dolly-parton-tmh.jpg" class="d-block w-100" alt="...">
 			</div>
 
 			<div class = 'col-8'>
@@ -88,7 +50,7 @@
 	</div>
 
 
-	<div class = 'gutter'></div>
+	<div class = 'big-gutter'></div>
 
 
 	<!-- CONTAINS ALL STATIC VERSIONS OF WHAT SHOULD BE TRANSITIONAL VISUALIZATIONS -->
@@ -97,14 +59,18 @@
 		<!-- Title for the country bubble visualization will be to the left of an external legend -->
 		<div class = 'row'>
 			<div class = 'col-4'>
-				<p class = 'title'>Anything we want to comment on?</p>
+				<div class= "big-gutter"></div>
+
+				<h4 class = 'title'>Ranging from classic country legend <em>Johnny Cash</em> to pop country hit <em>Luke Bryan</em>, country 
+				music casts a wide net. Still, it's sound is unique to the United States. A bubble that doesn't stand out in the presence of
+				<em>Taylor Swift</em> and <em>Elivs Presley</em> is renowned artist <em> Dolly Parton</em>.</h4>
 			</div>
 
 			<div class = 'col-8'>
 				<!-- Ensures title and legend are next to each other -->
 				<div class = "row">
 					<div class = 'col' id = 'vis-1a-title'>
-						<h3 class = 'vis-title title'>Billboard Country Artists (Mod 1)</h3>
+						<h3 class = 'vis-title title'>Billboard's Country Music Stars</h3>
 					</div>
 		
 					<div class = 'col' id = 'vis-1a-legend'>
@@ -129,14 +95,19 @@
 		<div class = 'row'>
 			<!-- Information to the left of all the visual elements, titles, ect. -->
 			<div class = 'col-4'>
-				<p class = 'title'>Anything we want to comment on?</p>
+				<div class = "big-gutter"></div>
+
+				<h4 class = 'title'>Despite her comparatively small impact on the Billboards, she is famous for more than her solo music career. 
+					Out of these major players on the Billboards, she has collaborated with 14 of them. This would be higher, as many people wanted to record 
+					the infamous song eventually performed by <em>Whitney Huston</em>, <em>I Will Always Love You</em>. <em>Elvis Presley</em> was one of them.
+				</h4>
 			</div>
 
 
 			<div class = 'col-8'>
 				<div class = "row">
 					<div class = 'col' id = 'vis-1b-title'>
-						<h3 class = 'vis-title title'>Country Artists Connected to Dolly Parton (Mod 1)</h3>
+						<h3 class = 'vis-title title'>Working 9 to 5</h3>
 					</div>
 		
 					<div class = 'col' id = 'vis-1b-legend'>
@@ -168,7 +139,7 @@
 			<div class = 'col-8'>
 				<div class = "row">
 					<div class = 'col' id = 'vis-1c-title'>
-						<h3 class = 'vis-title title'>Country Artists Connected to Dolly Parton Tree Version (Mod 1)</h3>
+						<h3 class = 'vis-title title'>Beyond the Billboards</h3>
 					</div>
 		
 					<div class = 'col' id = 'vis-1c-legend'>
@@ -312,7 +283,7 @@
 			<div class = 'col-8'>
 				<div class = 'row'>
 					<div class = 'col' id = 'vis-4-title'>
-						<h3 class = 'vis-title title'>Charity Work (Mod 3)</h3>
+						<h3 class = 'vis-title title'>My Tennessee Mountain Home</h3>
 					</div>
 		
 					<div class = 'col' id = 'vis-4-legend'>
