--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- Added custom title class with navbar-brand if we want all titles to be the same style later -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<div class="container-fluid">
-		  <a class="navbar-brand title" href="#">Dolly Parton: America's Darling</a>
+		  <a class="navbar-brand title" href="#">America's Darling</a>
 		  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 			<div class="navbar-nav">
 			  <a class="nav-link" href="#module-1">Connections</a>
@@ -29,9 +29,20 @@
 		</div>
 	</nav>
 
+	<div class='container-fluid module' id="cover">
+		<div class = 'row'>
+			<div class = 'col-12' style="height: 90vh; width:100%;">
+				<div class ='vidContain'>
+					<iframe class ='vid' title="vimeo-player" src="https://player.vimeo.com/video/366269951?h=a0fbd7f75a&autoplay=1&loop=1&autopause=0&muted=1&background=1"   allow="autoplay; fullscreen"></iframe>
+				</div>
+			</div>
+			<div id="text">
+				<h1 id="text-cover">DOLLY PARTON</h1>
+			</div>
+		</div>
+	</div>
 
 	<div class = 'gutter'></div>
-
 
 	<!-- An Intro Screen -->
 	<div class = 'container-fluid module' id = 'introduction'>
