Custom fonts, about us cards, styling headings
- Grabbed a few google fonts and added them into the vis titles and
  intro title
- Added Bootstrap cards in the about us section for us to put links or
  anything else about ourselves there

--- a/index.html
+++ b/index.html
@@ -321,12 +321,43 @@
 		<div class = 'row'>
 			<!-- Sources -->
 			<div class = 'col-4'>
-				<p>Wikipedia, Billboards, Kaggle, ect.</p>
+				<h4>Sources</h4>
 			</div>
 
 			<!-- About us section -->
 			<div class = 'col-8'>
-				<p>About Us</p>
+				<div class = "row justify-content-between">
+					<div class = 'col-4'>
+						<div class="card" style="width: 18rem;">
+							<div class="card-body">
+							  <h5 class="card-title">Isidora Diaz</h5>
+							  <h6 class="card-subtitle mb-2 text-muted">Data Science MS Candidate</h6>
+							  <p class="card-text">...</p>
+							</div>
+						</div>
+					</div>
+	
+					<div class = "col-4">
+						<div class="card" style="width: 18rem;">
+							<div class="card-body">
+							  <h5 class="card-title">Hope Neveux</h5>
+							  <h6 class="card-subtitle mb-2 text-muted">Data Science MS Candidate</h6>
+							  <p class="card-text">...</p>
+							</div>
+						</div>
+					</div>
+		
+					<div class = "col-4">
+						<div class="card" style="width: 18rem;">
+							<div class="card-body">
+							  <h5 class="card-title">Loralee Ryan</h5>
+							  <h6 class="card-subtitle mb-2 text-muted">Data Science MS Candidate</h6>
+							  <p class="card-text">...</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</div>
