--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 					<!-- Row with the timeline vis -->
 				</div>
 				<div class = 'row' >
-					<h3 style="color: white"> Explore other decades! </h3>
+					<h3 class = 'vis-title title' style="color: white"> Explore other decades! </h3>
 				</div>
 
 				<div class = 'row' id = 'vis-2-slider'>
