--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 				<div class = 'row'>
 					<div class = 'col bubble-vis' id = 'vis-1c' >
 						<!-- Radial dendrogram goes here -->
+						<h1 class = 'missing'>404</h1>
 					</div>
 				</div>
 			</div>
