--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 				<h4 class = 'title'>Ranging from classic country legend <em>Johnny Cash</em> to pop country hit <em>Luke Bryan</em>, country 
 				music casts a wide net. Still, it's sound is unique to the United States. A bubble that doesn't stand out in the presence of
-				<em>Taylor Swift</em> and <em>Elivs Presley</em> is renowned artist <em> Dolly Parton</em>.</h4>
+				<em>Taylor Swift</em> and <em>Elvis Presley</em> is renowned artist <em> Dolly Parton</em>.</h4>
 			</div>
 
 			<div class = 'col-8'>
