--- a/index.html
+++ b/index.html
@@ -288,7 +288,20 @@
 		<!-- Keeps everything together -->
 		<div class = 'row'>
 			<div class = 'col-4'>
-				<p class = 'title'>Anything we want to comment on?</p>
+				<p class = 'title'>Dolly Parton grew up in an extremely impoverished area of the country. Her
+				father was illiterate and access to medical care good medical care wasn't always available. She
+				has been quiet about her philanthropy, but many of the ones that are publicly known have been focused
+				on trying to help support her home state, particularly in the areas that she observed to be lacking
+				- health and education.
+
+				Her biggest impact is probably the purchase and continued expansion of Dollywood, a themepark right
+				in her home county. An assessment by the Tennessee Department of Transportation estimates the
+				economic impact of Dollywood to be ~1.8 billion per year. Dollywood currently employs ~11,000 people.
+				The impacts of a successful tourist attraction in an impoverished region cannot be overstated.
+
+				There are certainly many factors that may drive poverty rates, but census data appears to suggest
+				that Sevier County performed better over the decades than surrounding counties, possibly due to the
+				Dolly's repeated attempts to help the region, especially with the support of Dollywood.</p>
 			</div>
 
 			<div class = 'col-8'>
