Updated personal card at project bottom

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 							<div class="card-body">
 							  <h5 class="card-title">Hope Neveux</h5>
 							  <h6 class="card-subtitle mb-2 text-muted">Data Science MS Candidate</h6>
-							  <p class="card-text">...</p>
+							  <p class="card-text">Passionate about accessible, digestible, honest, and impactful visualization.</p>
 							</div>
 						</div>
 					</div>
