--- a/index.html
+++ b/index.html
@@ -314,14 +314,24 @@
 
 
 	<div class = 'container-fluid' id = 'footer'>
+		<div class = 'gutter-light'></div>
+
+		<!-- Sources list -->
+		<div class = 'row justify-content-center'>
+			<h3 class = "vis-title">Sources</h3>
+		</div>
 		<div class = 'row'>
-			<!-- Sources -->
 			<dl>
 				<li>Wikipedia contributors. (2022, October 23). List of awards and nominations received by Dolly Parton. <em>In Wikipedia, The Free Encyclopedia.</em></li>
 			</dl>
 		</div>
 
+		<div class = "big-gutter-light"></div>
+
 		<!-- About us section -->
+		<div class = 'row justify-content-center'>
+			<h3 class = "vis-title">Project Team</h3>
+		</div>
 		<div class = "row justify-content-between">
 			<div class = 'col-4'>
 				<div class="card" style="width: 18rem;">
