--- a/index.html
+++ b/index.html
@@ -321,9 +321,11 @@
 			<h3 class = "vis-title">Sources</h3>
 		</div>
 		<div class = 'row'>
-			<dl>
+			<!-- For the moment, would like to add card bootstrapping with auto-rowing columns to list these -->
+			<ul>
 				<li>Wikipedia contributors. (2022, October 23). List of awards and nominations received by Dolly Parton. <em>In Wikipedia, The Free Encyclopedia.</em></li>
-			</dl>
+				<li></li>
+			</ul>
 		</div>
 
 		<div class = "big-gutter-light"></div>
