Tree is now visable, but glitched and heavily overlapping

--- a/index.html
+++ b/index.html
@@ -127,11 +127,7 @@
 		<!-- Anything relating to the (3RD STATIC BUBBLE) country bubble visualization would go in this row -->
 		<!-- Title for the country bubble visualization will be to the left of an external legend -->
 		<div class = 'row'>
-			<div class = 'col-4'>
-				<p class = 'title'>Anything we want to comment on?</p>
-			</div>
-
-			<div class = 'col-8'>
+			<div class = 'col'>
 				<div class = "row">
 					<div class = 'col' id = 'vis-1c-title'>
 						<h3 class = 'vis-title title'>Beyond the Billboards</h3>
