--- a/index.html
+++ b/index.html
@@ -139,7 +139,10 @@
 				</div>
 		
 				<div class = 'row'>
-					<div class = 'col bubble-vis' id = 'vis-1c' >
+					<div class = 'col bubble-vis' id = 'vis-1ac' >
+						<!-- Radial dendrogram goes here -->
+					</div>
+					<div class = 'col bubble-vis' id = 'vis-1bc' >
 						<!-- Radial dendrogram goes here -->
 					</div>
 				</div>
