Second dendro focusing on multi-collaborators

--- a/index.html
+++ b/index.html
@@ -146,6 +146,15 @@
 						<!-- Radial dendrogram goes here -->
 					</div>
 				</div>
+
+				<div class = "row">
+					<div class = "col bubble-vis" id = 'vis-radial2-sup'>
+
+					</div>
+					<div class = 'col bubble-vis' id = 'vis-radial2'>
+
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -389,6 +398,7 @@
 	<!-- JS -->
 	<script src = "js/BubbleVis.js"></script>
 	<script src= "js/Dendrogram.js"></script>
+	<script src= "js/Dendrogram2.js"></script>
 	<script src = 'js/TimeSeries.js'></script>
 	<script src = 'js/Awards.js'></script>
 	<script src = 'js/Charity.js'></script>
