Replace (sadly) big dendros with minis vis decade

--- a/index.html
+++ b/index.html
@@ -148,6 +148,17 @@
 				</div>
 
 				<div class = "row">
+					<div class = 'col-4' id = 'vis-radial-1960s'></div>
+					<div class = 'col-4' id = 'vis-radial-1970s'></div>
+					<div class = 'col-4' id = 'vis-radial-1980s'></div>
+				</div>
+				<div class = 'row'>
+					<div class = 'col-4' id = 'vis-radial-1990s'></div>
+					<div class = 'col-4' id = 'vis-radial-2000s'></div>
+					<div class = 'col-4' id = 'vis-radial-2010s'></div>
+				</div>
+
+				<div class = "row">
 					<div class = "col bubble-vis" id = 'vis-radial2-sup'>
 
 					</div>
@@ -399,6 +410,7 @@
 	<script src = "js/BubbleVis.js"></script>
 	<script src= "js/Dendrogram.js"></script>
 	<script src= "js/Dendrogram2.js"></script>
+	<script src= "js/MiniDendro.js"></script>
 	<script src = 'js/TimeSeries.js'></script>
 	<script src = 'js/Awards.js'></script>
 	<script src = 'js/Charity.js'></script>
