Add year labels and horizontal line for easy reading

--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
 					<div class = 'col-4' id = 'vis-radial-1970s'></div>
 					<div class = 'col-4' id = 'vis-radial-1980s'></div>
 				</div>
+
+				<div class = 'horizontal-line'></div>
+
 				<div class = 'row'>
 					<div class = 'col-4' id = 'vis-radial-1990s'></div>
 					<div class = 'col-4' id = 'vis-radial-2000s'></div>
