Adding big gutters for better separation of mods

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 	</div>
 
 
-	<div class = 'gutter'></div>
+	<div class = 'big-gutter'></div>
 
 
 	<!-- Title and external legend side by side, plot underneath that, slider underneath the timeline -->
@@ -290,7 +290,7 @@
 	</div>
 
 
-	<div class = 'gutter'></div>
+	<div class = 'big-gutter'></div>
 
 
 	<div class = 'container-fluid module' id = 'module-4'>
