--- a/index.html
+++ b/index.html
@@ -56,9 +56,17 @@
 			<div class = 'col-4'>
 				<div class= "big-gutter"></div>
 
-				<h4 class = 'title'>Ranging from classic country legend <em>Johnny Cash</em> to pop country hit <em>Luke Bryan</em>, country 
-				music casts a wide net. Still, it's sound is unique to the United States. A bubble that doesn't stand out in the presence of
-				<em>Taylor Swift</em> and <em>Elvis Presley</em> is renowned artist <em> Dolly Parton</em>.</h4>
+				<div style="height: 100vh">
+					<h4 class = 'title'>Ranging from classic country legend <em>Johnny Cash</em> to pop country hit <em>Luke Bryan</em>, country 
+					music casts a wide net. Still, it's sound is unique to the United States. A bubble that doesn't stand out in the presence of
+					<em>Taylor Swift</em> and <em>Elvis Presley</em> is renowned artist <em> Dolly Parton</em>.</h4>
+				</div>
+				<div style="height: 100vh" id="bubble-second-text">
+					<h4 class = 'title'>Despite her comparatively small impact on the Billboards, she is famous for more than her solo music career. 
+						Out of these major players on the Billboards, she has collaborated with 14 of them. This would be higher, as many people wanted to record 
+						the infamous song eventually performed by <em>Whitney Huston</em>, <em>I Will Always Love You</em>. <em>Elvis Presley</em> was one of them.
+					</h4>
+				</div>
 			</div>
 
 			<div class = 'col-8'>
@@ -74,8 +82,10 @@
 				</div>
 		
 				<div class = 'row'>
-					<div class = 'col bubble-vis' id = 'vis-1a' style="height: 80vh; width: 100%;" >
-						<!-- Bubble SVG should go right where this is -->
+					<div class = 'col' style="height: 200vh; width: 100%;" >
+						<div class = 'col bubble-vis' id = 'vis-1a' style="height: 80vh; width: 100%; position: sticky; top: 0" >
+							<!-- Bubble SVG should go right where this is -->
+						</div>
 					</div>
 				</div>
 			</div>
@@ -85,45 +95,6 @@
 		<div class = 'gutter'></div>
 
 		
-		<!-- Anything relating to the (2ND STATIC VIEW) country bubble visualization would go in this row -->
-		<!-- Title for the country bubble visualization will be to the left of an external legend -->
-		<div class = 'row'>
-			<!-- Information to the left of all the visual elements, titles, ect. -->
-			<div class = 'col-4'>
-				<div class = "big-gutter"></div>
-
-				<h4 class = 'title'>Despite her comparatively small impact on the Billboards, she is famous for more than her solo music career. 
-					Out of these major players on the Billboards, she has collaborated with 14 of them. This would be higher, as many people wanted to record 
-					the infamous song eventually performed by <em>Whitney Huston</em>, <em>I Will Always Love You</em>. <em>Elvis Presley</em> was one of them.
-				</h4>
-			</div>
-
-
-			<div class = 'col-8'>
-				<div class = "row">
-					<div class = 'col' id = 'vis-1b-title'>
-						<h3 class = 'vis-title title'>Working 9 to 5</h3>
-					</div>
-		
-					<div class = 'col' id = 'vis-1b-legend'>
-						<!-- Outsource bubble legend here -->
-					</div>
-				</div>
-		
-				<div class = 'row'>
-					<!-- Row with the visualization and any captions / images we want to add using another column -->
-					<div class = 'col bubble-vis' id = 'vis-1b' style="height: 80vh; width: 100%;" >
-						<!-- Bubble SVG should go right where this is -->
-					</div>
-				</div>
-			</div>
-		</div>
-
-
-		<div class = 'gutter'></div>
-
-
-
 		<!-- Anything relating to the (3RD STATIC BUBBLE) country bubble visualization would go in this row -->
 		<!-- Title for the country bubble visualization will be to the left of an external legend -->
 		<div class = 'row'>
@@ -228,7 +199,7 @@
 	<div class = 'container-fluid module' id = 'module-3'>
 		<div class = 'row'>
 			<!-- Awards vis -->
-			<div class = 'col-8'>
+			<div class = 'col-8' style="height: 80vh; width: 100%; position: sticky; top: 0">
 				<div class = 'row' id = 'vis-3-title'>
 					<h3 class = 'vis-title title'>Recognition of Impact: Music, Acting, Composition, Achievements, and Service</h3>
 				</div>
@@ -243,7 +214,7 @@
 			</div>
 
 			<!-- Right of the vis -->
-			<div class = 'col-4'>		
+			<div class = 'col-4'>
 				<dvi class = row>
 					<div class="col">
 						<h1 class = 'title numeric' id = 'won-numeric'></h1>
@@ -284,7 +255,15 @@
 
 				<h4 class = 'title'>Dolly has rejected the <em>Presidential Medal of Freedom</em> twice. Another former president was shocked upon hearing
 					the news, assuming she had received one already.
-				</h4>	
+				</h4>
+
+				<div style="height: 80vh; background-color: #C0A0A0" id="selectorAll">All</div>
+				<div style="height: 80vh; background-color: #A0C0A0" id="selectorWon">Won</div>
+				<div style="height: 80vh; background-color: #A0A0C0" id="selectorNominated">Nominated</div>
+				<div style="height: 80vh; background-color: #C0C0A0" id="selectorMusicPerformance">Musical Performance</div>
+				<div style="height: 80vh; background-color: #C0A0C0" id="selectorMusic">Musical Artistry</div>
+				<div style="height: 80vh; background-color: #A0C0C0" id="selectorPhilanthropy">Philanthropy and Achievement</div>
+				<div style="height: 80vh; background-color: #C0C0C0" id="selectorMediaPerformance">Media Performance</div>
 			</div>
 		</div>
 	</div>
