--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 			<!-- Right of the vis -->
 			<div class = 'col-4'>
-				<dvi class = row>
+				<dvi class = row style="position: sticky; top: 0; background-color: black">
 					<div class="col">
 						<h1 class = 'title numeric' id = 'won-numeric'></h1>
 						<h4 class = 'title'><em>Won</em></h4>
@@ -227,37 +227,22 @@
 					</div>
 				</dvi>
 				
-				<div class = 'gutter'></div>
+				<div class = 'big-gutter'></div>
 
-				<div class = 'row'>
-						<!--Contains the filter options  -->
-						<select class="form-control" id = 'vis-3-select' aria-label=".form-select-sm" onchange="awardsFilter()">
-							<option value="All">All</option>
-							<option value="Won">Won</option>
-							<option value="Nominated">Nominated</option>
-							<option value="Music Performance">Musical Performance</option>
-							<option value="Music">Musical Artistry</option>
-							<option value="Philanthropy">Philanthropy and Achievement</option>
-							<option value="Media Performance">Media Performance</option>
-						</select>
+
+				<div style="height: 80vh; background-color: #C0A0A0" id="selectorAll">
+					All
+					<h4 class = 'title'>
+						She has received awards notably from the <em>Sevierville Chamber of Commerce</em>, <em>Hollywood Chamber of Commerce</em>, <em>United States Fish and Wildlife Service</em>, <em>Daughters of the American Revolution</em>,
+						<em>Woodrow Wilson International Center for Scholars of the Smithsonian Institution</em>, <em>United States Library of Congress</em> and the <em>United States Congress</em>.
+					</h4>
+
+					<div class = 'big-gutter'></div>
+
+					<h4 class = 'title'>Dolly has rejected the <em>Presidential Medal of Freedom</em> twice. Another former president was shocked upon hearing
+						the news, assuming she had received one already.
+					</h4>
 				</div>
-
-				
-				<div class = 'big-gutter'></div>
-
-
-				<h4 class = 'title'>
-					She has received awards notably from the <em>Sevierville Chamber of Commerce</em>, <em>Hollywood Chamber of Commerce</em>, <em>United States Fish and Wildlife Service</em>, <em>Daughters of the American Revolution</em>,
-					<em>Woodrow Wilson International Center for Scholars of the Smithsonian Institution</em>, <em>United States Library of Congress</em> and the <em>United States Congress</em>.
-				</h4>	
-
-				<div class = 'big-gutter'></div>
-
-				<h4 class = 'title'>Dolly has rejected the <em>Presidential Medal of Freedom</em> twice. Another former president was shocked upon hearing
-					the news, assuming she had received one already.
-				</h4>
-
-				<div style="height: 80vh; background-color: #C0A0A0" id="selectorAll">All</div>
 				<div style="height: 80vh; background-color: #A0C0A0" id="selectorWon">Won</div>
 				<div style="height: 80vh; background-color: #A0A0C0" id="selectorNominated">Nominated</div>
 				<div style="height: 80vh; background-color: #C0C0A0" id="selectorMusicPerformance">Musical Performance</div>
