--- a/index.html
+++ b/index.html
@@ -227,7 +227,20 @@
 					</div>
 				</dvi>
 				
-				<div class = 'big-gutter'></div>
+				<div class = 'gutter'></div>
+
+				<div class = 'row'>
+						<!--Contains the filter options  -->
+						<select class="form-control" id = 'vis-3-select' aria-label=".form-select-sm" onchange="awardsFilter()">
+							<option value="All">All</option>
+							<option value="Won">Won</option>
+							<option value="Nominated">Nominated</option>
+							<option value="Music Performance">Musical Performance</option>
+							<option value="Music">Musical Artistry</option>
+							<option value="Philanthropy">Philanthropy and Achievement</option>
+							<option value="Media Performance">Media Performance</option>
+						</select>
+				</div>
 
 
 				<div style="height: 80vh; background-color: #C0A0A0" id="selectorAll">
@@ -239,16 +252,13 @@
 
 					<div class = 'big-gutter'></div>
 
-					<h4 class = 'title'>Dolly has rejected the <em>Presidential Medal of Freedom</em> twice. Another former president was shocked upon hearing
-						the news, assuming she had received one already.
-					</h4>
-				</div>
-				<div style="height: 80vh; background-color: #A0C0A0" id="selectorWon">Won</div>
-				<div style="height: 80vh; background-color: #A0A0C0" id="selectorNominated">Nominated</div>
-				<div style="height: 80vh; background-color: #C0C0A0" id="selectorMusicPerformance">Musical Performance</div>
-				<div style="height: 80vh; background-color: #C0A0C0" id="selectorMusic">Musical Artistry</div>
-				<div style="height: 80vh; background-color: #A0C0C0" id="selectorPhilanthropy">Philanthropy and Achievement</div>
-				<div style="height: 80vh; background-color: #C0C0C0" id="selectorMediaPerformance">Media Performance</div>
+				<div style="height: 80vh" id="selectorAll"></div>
+				<div style="height: 80vh" id="selectorWon">Won</div>
+				<div style="height: 80vh" id="selectorNominated">Nominated</div>
+				<div style="height: 80vh" id="selectorMusicPerformance">Musical Performance</div>
+				<div style="height: 80vh" id="selectorMusic">Musical Artistry</div>
+				<div style="height: 80vh" id="selectorPhilanthropy">Philanthropy and Achievement</div>
+				<div style="height: 80vh" id="selectorMediaPerformance">Media Performance</div>
 			</div>
 		</div>
 	</div>
