Fixed missing div

--- a/index.html
+++ b/index.html
@@ -227,7 +227,6 @@
 					</div>
 				</dvi>
 				
-				<div class = 'gutter'></div>
 
 				<div class = 'row'>
 						<!--Contains the filter options  -->
@@ -242,15 +241,14 @@
 						</select>
 				</div>
 
+				<div class = 'gutter'></div>
 
-				<div style="height: 80vh; background-color: #C0A0A0" id="selectorAll">
-					All
+				<div style="height: 80vh" id="selectorAll">
 					<h4 class = 'title'>
 						She has received awards notably from the <em>Sevierville Chamber of Commerce</em>, <em>Hollywood Chamber of Commerce</em>, <em>United States Fish and Wildlife Service</em>, <em>Daughters of the American Revolution</em>,
 						<em>Woodrow Wilson International Center for Scholars of the Smithsonian Institution</em>, <em>United States Library of Congress</em> and the <em>United States Congress</em>.
 					</h4>
-
-					<div class = 'big-gutter'></div>
+				</div>
 
 				<div style="height: 80vh" id="selectorAll"></div>
 				<div style="height: 80vh" id="selectorWon">Won</div>
