Stop horizontal scrollbar from appearing (TimeSeries vis)

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				</div>
 			</div>
 
-			<div class = 'col' id = 'vis-2-legend' style="height: 5vh; width:5vh;">
+			<div class = 'col' id = 'vis-2-legend' style="height: 5vh; padding:0">
 				<!-- Outsource timeline legend here -->
 			</div>
 			
