First attempt at left-hand menu

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 
+	<a id="top"></a>
 	<div class='container-fluid module' id="cover">
 		<div class = 'row'>
 			<div class = 'col-12' style="height: 90vh; width:100%;">
@@ -49,6 +50,7 @@
 
 
 	<!-- CONTAINS ALL STATIC VERSIONS OF WHAT SHOULD BE TRANSITIONAL VISUALIZATIONS -->
+	<a id="billboard"></a>
 	<div class = "container-fluid module" id = 'module-1'>
 		<!-- Anything relating to the (1ST STATIC VIEW) country bubble visualization would go in this row -->
 		<!-- Title for the country bubble visualization will be to the left of an external legend -->
@@ -97,6 +99,7 @@
 		
 		<!-- Anything relating to the (3RD STATIC BUBBLE) country bubble visualization would go in this row -->
 		<!-- Title for the country bubble visualization will be to the left of an external legend -->
+		<a id="collaborations"></a>
 		<div class = 'row'>
 			<div class = 'col'>
 				<div class = "row">
@@ -149,6 +152,7 @@
 
 
 	<!-- Title and external legend side by side, plot underneath that, slider underneath the timeline -->
+	<a id="musicalhistory"></a>
 	<div class = 'container-fluid module' id = 'module-2'>
 
 		<div class = 'row'>
@@ -196,6 +200,7 @@
 	<div class = 'big-gutter'></div>
 
 
+	<a id="recognition"></a>
 	<div class = 'container-fluid module' id = 'module-3'>
 		<div class = 'row'>
 			<!-- Awards vis -->
@@ -257,6 +262,7 @@
 	<div class = 'big-gutter'></div>
 
 
+	<a id="charity"></a>
 	<div class = 'container-fluid module' id = 'module-4'>
 		<!-- Keeps everything together -->
 		<div class = 'row'>
@@ -316,6 +322,7 @@
 		<div class = "big-gutter-light"></div>
 
 		<!-- About us section -->
+		<a id="team"></a>
 		<div class = 'row justify-content-center'>
 			<h3 class = "vis-title">Project Team</h3>
 		</div>
@@ -352,6 +359,20 @@
 		</div>
 
 
+	</div>
+
+	<div class="left-menu">
+		<div style="flex-grow: 1"></div>
+		<div>
+			<div><a href="#top" title="Top">&bull; <span class="item-text">Top</span></a></div>
+			<div><a href="#billboard" title="Billboard impact">&bull; <span class="item-text">Billboard impact</span></a></div>
+			<div><a href="#collaborations" title="Collaborations">&bull; <span class="item-text">Collaborations</span></a></div>
+			<div><a href="#musicalhistory" title="Musical history">&bull; <span class="item-text">Musical history</span></a></div>
+			<div><a href="#recognition" title="Recognition">&bull; <span class="item-text">Recognition</span></a></div>
+			<div><a href="#charity" title="Charity">&bull; <span class="item-text">Charity</span></a></div>
+			<div><a href="#team" title="Team">&bull; <span class="item-text">Team</span></a></div>
+		</div>
+		<div style="flex-grow: 1"></div>
 	</div>
 
 	<!-- embedding JS libraries -->
