Removing scroll colors for awards for seamless transition

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 				<div class = 'big-gutter'></div>
 
 
-				<div style="height: 80vh; background-color: #C0A0A0" id="selectorAll">
+				<div style="height: 80vh" id="selectorAll">
 					All
 					<h4 class = 'title'>
 						She has received awards notably from the <em>Sevierville Chamber of Commerce</em>, <em>Hollywood Chamber of Commerce</em>, <em>United States Fish and Wildlife Service</em>, <em>Daughters of the American Revolution</em>,
@@ -243,12 +243,12 @@
 						the news, assuming she had received one already.
 					</h4>
 				</div>
-				<div style="height: 80vh; background-color: #A0C0A0" id="selectorWon">Won</div>
-				<div style="height: 80vh; background-color: #A0A0C0" id="selectorNominated">Nominated</div>
-				<div style="height: 80vh; background-color: #C0C0A0" id="selectorMusicPerformance">Musical Performance</div>
-				<div style="height: 80vh; background-color: #C0A0C0" id="selectorMusic">Musical Artistry</div>
-				<div style="height: 80vh; background-color: #A0C0C0" id="selectorPhilanthropy">Philanthropy and Achievement</div>
-				<div style="height: 80vh; background-color: #C0C0C0" id="selectorMediaPerformance">Media Performance</div>
+				<div style="height: 80vh" id="selectorWon">Won</div>
+				<div style="height: 80vh" id="selectorNominated">Nominated</div>
+				<div style="height: 80vh" id="selectorMusicPerformance">Musical Performance</div>
+				<div style="height: 80vh" id="selectorMusic">Musical Artistry</div>
+				<div style="height: 80vh" id="selectorPhilanthropy">Philanthropy and Achievement</div>
+				<div style="height: 80vh" id="selectorMediaPerformance">Media Performance</div>
 			</div>
 		</div>
 	</div>
