--- a/index.html
+++ b/index.html
@@ -222,7 +222,31 @@
 
 
 				<div style="height: 80vh" id="selectorAll">
-					All
+					<!-- All -->
+					<h4 class = 'title'>
+						Dolly Parton has won countless awards from the Grammy's, Guinness World Records, and United States Congress.
+					</h4>
+				</div>
+				<div style="height: 80vh" id="selectorWon">
+					<!-- Won -->
+					<h4 class = 'title'>
+						
+					</h4>
+				</div>
+				<div style="height: 80vh" id="selectorNominated">
+					<!-- Nominated -->
+
+				</div>
+				<div style="height: 80vh" id="selectorMusicPerformance">
+					<!-- Musical Performance -->
+
+				</div>
+				<div style="height: 80vh" id="selectorMusic">
+					<!-- Musical Artistry -->
+
+				</div>
+				<div style="height: 80vh" id="selectorPhilanthropy">
+					<!-- Philanthropy and Achievement -->
 					<h4 class = 'title'>
 						She has received awards notably from the <em>Sevierville Chamber of Commerce</em>, <em>Hollywood Chamber of Commerce</em>, <em>United States Fish and Wildlife Service</em>, <em>Daughters of the American Revolution</em>,
 						<em>Woodrow Wilson International Center for Scholars of the Smithsonian Institution</em>, <em>United States Library of Congress</em> and the <em>United States Congress</em>.
@@ -234,12 +258,12 @@
 						the news, assuming she had received one already.
 					</h4>
 				</div>
-				<div style="height: 80vh" id="selectorWon">Won</div>
-				<div style="height: 80vh" id="selectorNominated">Nominated</div>
-				<div style="height: 80vh" id="selectorMusicPerformance">Musical Performance</div>
-				<div style="height: 80vh" id="selectorMusic">Musical Artistry</div>
-				<div style="height: 80vh" id="selectorPhilanthropy">Philanthropy and Achievement</div>
-				<div style="height: 80vh" id="selectorMediaPerformance">Media Performance</div>
+				<div style="height: 80vh" id="selectorMediaPerformance">
+					<!-- Media Performance -->
+					<h4 class = 'title'>
+						Her hit song <em>9 to 5</em> was made for the 1980 film <em>9 to 5</em>, where she played Doralee Rhodes.
+					</h4>
+				</div>
 			</div>
 		</div>
 	</div>
